main/default/objects/Predecessor_Template__c/Predecessor_Template__c.object-meta.xml
<CustomObject>
    <label>Predecessor Template</label>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>Predecessor Template Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Predecessor Templates</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>