main/default/objects/Predecessor_Template__c/fields/Dependent_Workstep_Template__c.field-meta.xml
<CustomField>
    <fullName>Dependent_Workstep_Template__c</fullName>
    <label>Dependent Workstep Template</label>
    <referenceTo>Workstep_Template__c</referenceTo>
    <relationshipLabel>Predecessors Templates</relationshipLabel>
    <relationshipName>Dependent_Workstep_Templates</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>