main/default/objects/Predecessor_Template__c/fields/Predecessor_Workstep_Template__c.field-meta.xml
<CustomField>
    <fullName>Predecessor_Workstep_Template__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Predecessor Workstep Template</label>
    <referenceTo>Workstep_Template__c</referenceTo>
    <relationshipLabel>Successor Templates</relationshipLabel>
    <relationshipName>Predecessor_Templates</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>