main/default/objects/Predecessor_Template__c/fields/Task_Dependency_Type__c.field-meta.xml
<CustomField>
    <fullName>Task_Dependency_Type__c</fullName>
    <label>Task Dependency Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Finish-To-Start [FS]</fullName>
                <default>true</default>
                <label>Finish-To-Start [FS]</label>
            </value>
            <value>
                <fullName>Start-To-Start [SS]</fullName>
            </value>
            <value>
                <fullName>Finish-To-Finish [FF]</fullName>
            </value>
            <value>
                <fullName>Start-To-Finish [SF]</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>